fixed the alignment issue of team members

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -237,7 +237,7 @@ canvas {
 
 .container {
 	display: flex;
-	align-items: flex-end;
+	align-items: stretch;
 	color: white;
 	width: 100%;
 	justify-content: center;
@@ -254,6 +254,9 @@ canvas {
 .podium__item {
 	width: 250px;
 	transition: 0.5s;
+	display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 85% 25%;
 }
 
 .podium__item:hover {
